# OpenModelica-testsuite

./: .gitignore  .gitmodules  .gitvalidfiles  Makefile  Makefile.common  Makefile.in  configure.ac  rtest  rtest.in
ReferenceFiles/cppruntime/: MultipleBaseClocks.mat
difftool/: Makefile
flattening/modelica/arrays/: FillSubscriptsTest.mo
flattening/modelica/enums/: EnumInvalidLiteral.mo
flattening/modelica/modification/: Bug3817.mos
flattening/modelica/others/: ThermoPower.Examples.BraytonCycle.ClosedLoopSimulator.mos
flattening/modelica/redeclare/: AttributesPropagation.mo
flattening/modelica/scodeinst/: Makefile  (+92 more)
openmodelica/MatlabTranslator/: SCRIPT.mos
openmodelica/bootstrapping/: LoadCompilerSources.mos  Makefile
openmodelica/cppruntime/: EventClock.mo  EventClock.mos  Makefile  MultipleBaseClocks.mos
openmodelica/debugDumps/: Makefile  dumpTransformedModelica.mos  dumpeqninorder.mos  lateInline.mos  optSimpleSolveDAEdump.mos  optdaedump.mos  symjacdump.mos
openmodelica/interactive-API/: CopyClass.mos  Makefile  importFMUModelDescription.mos  interactive_api_attributes.mos  interactive_api_calls.mos  interactive_api_classes.mos  modelDescription.xml  saveTotalModel.mos
openmodelica/linearization/: simextfunction.mos
openmodelica/visualization/: Fourbar1_ReferenceVis.xml  Makefile  testVisXML.mos
openmodelica/xml/: Bug3857.mos  Makefile  XmlDumpComment.mos  testMSD.mos  testVis.mo  testVis.mos  testVisRef_visual.xml
special/FmuExportCrossCompile/: fmu-run.sh
special/MatlabTranslator/: Main.mo  SCRIPT.mos
(+78 files in other folders)
